changed one of the important milestone

--- a/html personal site/index.html
+++ b/html personal site/index.html
@@ -39,7 +39,7 @@
         </tr>
         <tr>
             <td>~2016</td>
-            <td>things started to change as i became more mentally mature</td>
+            <td>went for physical training classes which completely changed my physique and lifestyle</td>
         </tr>
         <tr>
             <td>~2021</td>
